Source/WebCore: https://bugs.webkit.org/show_bug.cgi?id=52044 REGRESSION(r74807): No-store is ignored within a document

Reviewed by Alexey Proskuryakov.

Don't use cached resources with Cache-control: no-store (unless cache policy is CachePolicyHistoryBuffer).
This matches a behavior that got lost in r74807.

Test: http/tests/misc/script-no-store.html
(by Alexey Proskuryakov)

* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::determineRevalidationPolicy):

LayoutTests: https://bugs.webkit.org/show_bug.cgi?id=52044
REGRESSION(r74807): No-store is ignored within a document

Reviewed by Alexey Proskuryakov.

* http/tests/misc/script-no-store-expected.txt: Added.
* http/tests/misc/script-no-store.html: Added.
* http/tests/misc/resources/random-no-store.php: Added.



Canonical link: https://commits.webkit.org/65698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75384 268f45cc-cd09-0410-ab3c-d52691b4dbfc