LayoutTests/http/tests/misc/resources/random-no-store.php
@@ -1,0 +1,9 @@
+<?php
+    header("Cache-Control: no-store");
+?>
+var p = document.createElement("p");
+p.appendChild(document.createTextNode("<?php
+    print rand();
+?>
+"));
+document.body.appendChild(p);
